switch from purchases to payments
