# app/Http/Controllers/API/ExternalServices/PaymentsController.php
@@ -4,7 +4,7 @@ namespace App\Http\Controllers\API\ExternalServices;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\BillingRequest;
-use App\Purchase;
+use App\Payment;
 
 class PaymentsController extends Controller
 {
@@ -25,10 +25,10 @@ class PaymentsController extends Controller
      * },
      * @OA\RequestBody(
      *    required=true,
-     *    description="Purchase data",
+     *    description="Payment data",
      *    @OA\JsonContent(
-     *       required={"payment_session_token","card"},
-     *       @OA\Property(property="payment_session_token", type="string", example="$2y$04$1rS6a2vh9ePY.mjg0I1gTeCskbl/jTy65DOTDDY/P6n4yvL3J4LcK"),
+     *       required={"token","card"},
+     *       @OA\Property(property="token", type="string", example="$2y$04$1rS6a2vh9ePY.mjg0I1gTeCskbl/jTy65DOTDDY/P6n4yvL3J4LcK"),
      *       @OA\Property(property="card", type="integer", example="4425669844123325"),
      *    ),
      * ),
@@ -47,12 +47,11 @@ class PaymentsController extends Controller
      */
     public function confirm(BillingRequest $request)
     {
-        $purchase = Purchase::unconfirmed()->where('payment_session_token', $request->payment_session_token)->first();
+        $purchase = Payment::unconfirmed()->where('token', $request->token)->first();
 
         if (is_null($purchase)) {
             return response("You motherfucker, come on you little ass… fuck with me, eh? You fucking little asshole, dickhead cocksucker…You fuckin' come on, come fuck with me! I'll get your ass, you jerk! Oh, you fuckhead motherfucker! Fuck all you and your family! Come on, you cocksucker, slime bucket, shitface turdball! Come on, you scum sucker, you fucking with me? Come on, you asshole!!!", 404);
         }
-
         $purchase->confirm();
 
         return response("Your payment is successfully proceeded! Key has been to your email.", 200);
