# app/Http/Requests/BillingRequest.php
@@ -16,14 +16,14 @@ class BillingRequest extends FormRequest
     {
         return [
             'card' => ['required', 'integer', new LuhnRule()],
-            'payment_session_token' => ['required', 'string', 'min:30', 'max:100', 'exists:purchases,payment_session_token']
+            'token' => ['required', 'string', 'min:30', 'max:100', 'exists:payments,token']
         ];
     }
 
     protected function prepareForValidation()
     {
         $this->merge([
-            'payment_session_token' => $this->payment_session_token
+            'token' => $this->token
         ]);
     }
 }
